# goit-pythonweb-hw-10

./: Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  seed.py
migrations/: env.py
migrations/versions/: 161b585da075_add_missing_fields.py  3a7ff64027aa_add_user.py  b848d59beb3c_init.py  d10eaae0c70a_add_additional_info.py
src/: schemas.py
src/api/: auth.py  contacts.py  users.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  users.py
src/services/templates/: email_template.html
