[project]
name = "hw-08"
version = "0.1.0"
description = ""
authors = [
    {name = "Natallia Khodorova",email = "icxodnik@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "pydantic (>=2.11.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "hw_08", from = "src"}]


[tool.poetry.group.dev.dependencies]
pydantic = "^2.11.5"
faker = "^37.3.0"
asyncio = "^3.4.3,<4.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
