[project]
name = "hw-08"
version = "0.1.0"
description = ""
authors = [
    {name = "Natallia Khodorova",email = "icxodnik@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"

[tool.poetry]
package-mode = false
packages = [{include = "hw_08", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0"
alembic = "^1.14.0"
greenlet = "^3.1.1"
fastapi = "^0.115.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
libgravatar = "^1.0.4"
python-dotenv = "^1.0.1"
slowapi = "^0.1.9"
redis = "^5.2.1"
redis-lru = "^0.1.2"
fastapi-mail = "^1.4.2"
pydantic = "^2.10.3"
pydantic-settings = "^2.7.0"
cloudinary = "^1.41.0"
psycopg2-binary = "^2.9.10"
uvicorn = "^0.34.2"
python-multipart = "^0.0.20"


[tool.poetry.group.dev.dependencies]
faker = "^37.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
